--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 </head>
 <body>
 
-	<div class="container">
-    <h1>Color Generator</h1>
-    <p id="currentColor"></p>
-    <button id="getNewColor">Get New Color</button>
-	</div>
+	<p class="status"></p>
+	
 </body>
 </html>
